Wed Sep 21 16:44:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/cspublic.h include/cstypes.h include/ctlib.h:
	* include/tds.h src/ctlib/ct.c:
	- improve binary compatibility with Sybase libraries

Mon Sep 19 16:53:05 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/query.c: check valid id for prepared on tds7+

Mon Sep 19 16:50:46 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/numeric.c: small optimization

Mon Sep 19 16:45:42 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/unittests/array.c: fix test

Wed Aug 31 17:21:12 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: delete invalid dynamic

Wed Aug 31 17:19:15 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/unittests/done_handling.c:
	- use common code and PWD

Thu Aug 25 17:05:00 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- do not overwrite state if not in IDLE state
	* src/odbc/sql2tds.c: typo
	* src/tds/convert.c: comments

Wed Aug 23 19:25:32 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/convert_tds2sql.c src/odbc/prepare_query.c:
	* src/tds/challenge.c src/tds/locale.c src/tds/numeric.c:
	* src/tds/read.c src/tds/tdsstring.c src/tds/threadsafe.c:
	* src/tds/write.c:
	- updated copyright

Tue Aug 16 17:02:32 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/dblib.h include/tds.h src/dblib/buffering.h:
	* src/dblib/dblib.c src/dblib/unittests/.cvsignore:
	* src/dblib/unittests/Makefile.am:
	* src/dblib/unittests/text_buffer.c(added):
	* src/tds/mem.c src/tds/tds_checks.c:
	- redone buffering in dblib fixing text problems

Sun Aug 14 18:45:55 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix race condition setting current_statement

Sun Aug 14 11:20:11 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/unittests/preperror.c:
	- catch error preparing statement