@@ -1,3 +1,7 @@
+Thu Sep 22 16:15:59 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
+	* include/dblib.h src/dblib/dblib.c:
+	- fix reentrancy problem for dblib
+
 Wed Sep 21 16:44:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
 	* include/cspublic.h include/cstypes.h include/ctlib.h:
 	* include/tds.h src/ctlib/ct.c:
